# Callisto

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Setup.bat
includes/: Allocator.hpp  AllocatorSTL.hpp  Exception.hpp  MemoryTree.hpp
src/: Allocator.cpp  MemoryTree.cpp
test/: CMakeLists.txt
test/src/: AllocatorBaseTest.cc  AllocatorSTLTest.cc  BuddyTest.cc  CallistoTest.cxx  ReusableContainerTest.cc  ReusableVectorTest.cc  SharedBufferAllocatorTest.cc
